Bug 147013 - Shapes containing arcs are not printed properly
Summary: Shapes containing arcs are not printed properly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
7.3.0.2 rc
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.4.0 target:7.3.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-01-27 02:30 UTC by Saburo
Modified: 2022-02-17 05:35 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Oval (24.85 KB, image/jpeg)
2022-01-27 05:40 UTC, Saburo
Details
When I printed the circle shape, it was deformed. (80.14 KB, image/png)
2022-01-28 01:19 UTC, Junichi Matsukawa
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Saburo 2022-01-27 02:30:29 UTC
Description:
Calc,Draw,Writer
Insert - Shape - Basic Shapes - [Rectangle,Rounded], [Square,Rounded], [Ellipse], [Circle], [Circle Segment], [Arc], [Cylinder]

Line Properties
Style: Other than [Continuous]  exp:[Ultrafine Dashed]
Width: Greater than 0.00 cm

The orientation is reversed when printing

Steps to Reproduce:
1.[Insert]-[Shape]-[Basic Shapes]-[Circle]
2.Line Style:[Ultrafine Dashed],Width:[0.13cm]
3.Print

Actual Results:
A strange shape is printed


Expected Results:
Modifying the drawing process


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.3.0.2 (x64) / LibreOffice Community
Build ID: f1c9017ac60ecca268da7b1cf147b10e244b9b21
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: default; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: threaded
Comment 1 Saburo 2022-01-27 05:40:14 UTC
Created attachment 177819 [details]
Oval
Comment 2 JO3EMC 2022-01-27 08:28:28 UTC
It is reproduced in the following versions, but not in 7.2.5.

Version: 7.3.0.2 (x64) / LibreOffice Community
Build ID: f1c9017ac60ecca268da7b1cf147b10e244b9b21
CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL

Version: 7.3.1.0.0+ (x64) / LibreOffice Community
Build ID: ad19d0c354887ac05561ca009a3f89cc62dfe9cf
CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL

Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: eb69767d7c1bb8e6e780fd9503f08c9d7f5ecb45
CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL


Expected Results:
Print output of the correct arc.


Reproducible: Always


User Profile Reset: Yes

The preview of the "Print" dialog looks to be strange too.
But PDF export is normal.
Comment 3 Junichi Matsukawa 2022-01-28 01:19:26 UTC
Created attachment 177857 [details]
When I printed the circle shape, it was deformed.

I reproduced it.
Draw a circle with Calc, change it to a dashed line, and print to Microsoft Print to PDF.

Version: 7.3.0.2 (x64) / LibreOffice Community
Build ID: f1c9017ac60ecca268da7b1cf147b10e244b9b21
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL
Comment 4 himajin100000 2022-01-29 18:37:45 UTC
$ git bisect log
# bad: [a209d6cc0892059375d3ee53987a56bc72130ff7] source 7ec1ef958855ba7ebff4d3bc623f454015ec5a5c
# good: [ae1ad37a8ac6da497ad38f3a5d8c55dd6bb01f9c] source ff2ba77f22b2e96f96f5537aec1705956b47583d
git bisect start 'latest' 'oldest'
# good: [c215c69a02c4c3c74edbd58aec4cfb9e8720cd65] source af686402107a54f141eea3bb7706e3ff665178ae
git bisect good c215c69a02c4c3c74edbd58aec4cfb9e8720cd65
# bad: [5c16e7dd703a5b26522cd7afae5cccc2c328ed0a] source e6fe048ded34a322007547d4d31e32c598aa4993
git bisect bad 5c16e7dd703a5b26522cd7afae5cccc2c328ed0a
# good: [5d322064769a71e93b5a9d6766d859752c258eb2] source 00abfe06caa489559cbda0db082f5e118a324f6c
git bisect good 5d322064769a71e93b5a9d6766d859752c258eb2
# bad: [a536d7ac5e7e9449f013681d385454903583cbf5] source ccea340276609c87384ee7fff4837e48baaba9b5
git bisect bad a536d7ac5e7e9449f013681d385454903583cbf5
# good: [f25a283fb565371dddd7659341f8237c72896869] source 7ccfae545d7650a7f3e6bc8a010c97cd0a60e9a5
git bisect good f25a283fb565371dddd7659341f8237c72896869
# good: [3f8879e0b9287ad425c7f98e8deb10fb5b4276fe] source 2c0e5d8b2e53921f09b2e5036cc25f8b0a177dd6
git bisect good 3f8879e0b9287ad425c7f98e8deb10fb5b4276fe
# good: [b99d6315bf4cdf3c7b5e2c2e37acb5894bc8b377] source 34219c3cb737371afb4a29604e95f0e87966f02a
git bisect good b99d6315bf4cdf3c7b5e2c2e37acb5894bc8b377
# bad: [74e707083ec4d7950e133d8027a38c4ae0246839] source 14d299f8f1e19b39dfa81e143762c6b277c1ae9a
git bisect bad 74e707083ec4d7950e133d8027a38c4ae0246839
# bad: [65b41678013b9028480577ecc4be1d40be5894ad] source 1c75df810439c71e975b166a66087c3d5a9ecdf3
git bisect bad 65b41678013b9028480577ecc4be1d40be5894ad
# bad: [5cd8335c9015c8bb29b29d91a6c8240d0f23155d] source 96d1240adf946c443fb2c369a1c84e31e259c7a8
git bisect bad 5cd8335c9015c8bb29b29d91a6c8240d0f23155d
# bad: [aa100194ad86e431407ade63a0229c20a8c06e94] source e5ced8a0e875226152ceae2ad84bac0292e20c4f
git bisect bad aa100194ad86e431407ade63a0229c20a8c06e94
# good: [b0ea1914cfbbf14a141c8ec75c0426ee5a2db6cd] source 030bfda5ec47e28bf66aa2176ace3f626794d5b1
git bisect good b0ea1914cfbbf14a141c8ec75c0426ee5a2db6cd
# first bad commit: [aa100194ad86e431407ade63a0229c20a8c06e94] source e5ced8a0e875226152ceae2ad84bac0292e20c4f
Comment 5 Telesto 2022-01-29 18:41:34 UTC
(In reply to himajin100000 from comment #4)
> # first bad commit: [aa100194ad86e431407ade63a0229c20a8c06e94] source
> e5ced8a0e875226152ceae2ad84bac0292e20c4f

author	Caolán McNamara <caolanm@redhat.com>	2021-09-09 20:02:55 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2021-09-09 22:21:33 +0200
commit e5ced8a0e875226152ceae2ad84bac0292e20c4f (patch)
tree 8bc2e4960f3c56f22cd189783f9b28564dbff42b
parent 030bfda5ec47e28bf66aa2176ace3f626794d5b1 (diff)
crashtesting: assert making thumbnail on reexport of tdf127770-1.ods to ods
convert to B2DPolygon earlier and do scaling on B2DPolygon's doubles

https://cgit.freedesktop.org/libreoffice/core/commit/?id=e5ced8a0e875226152ceae2ad84bac0292e20c4f
Comment 6 Commit Notification 2022-01-30 14:38:44 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/85cc59ba11f9334e0ed5f277607f5d9d63302856

Resolves: tdf#147013 transform the control point positions too

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2022-01-30 14:39:32 UTC
done in trunk, backport to 7-3 in gerrit
Comment 8 Commit Notification 2022-01-30 19:39:57 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/b5b115ecc87c09146eb76d891496175218ed45c2

Resolves: tdf#147013 transform the control point positions too

It will be available in 7.3.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 JO3EMC 2022-02-17 05:35:09 UTC
I confirmed that it was fixed in 7.3.1.1.