Resolves: tdf#147013 transform the control point positions too

Change-Id: Ia73317a79de66778d4b2d0face07ee4c41e328d7